[package]
name = "steamworksjs"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "3.3.0", features = ["tokio_rt", "napi10", "serde-json"] }
napi-derive = "3.2.5"
lazy_static = "1"
tokio = { version = "1", features = ["sync", "time"] }
steamworks = { version = "0.12.2", features = ["serde", "raw-bindings"] }
serde = "1"
serde_json = "1"
better-panic = "0.3.0"

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
